dashboard overflow bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,7 +108,7 @@ body{
   color: #FFF;
 }
 
-#dashboard{background-color: #F1F1F4;}
+#dashboard{background-color: #F1F1F4;overflow-x:hidden;}
 #dashboard .ui-content{padding:0;}
 ul.tabs{
   list-style-type: none;
@@ -284,6 +284,7 @@ li .ui-icon-custom{
   }
 
   .btn,
+  div.ui-btn,
   a.ui-btn,
   input.ui-btn{
     color:#FFF;
